--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         <div class = "search-container">
             <div class = "search-element">
                 <h3>Search:</h3>
-                <input type = "text" class = "form-control" placeholder="Search Movie Title ..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
+                <input type = "text" class = "form-control" placeholder="Search Movie Here" id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
 
                 <div class = "search-list" id = "search-list">
                     
                 </div>
             </div>
-            <a href="/favourites.html" id="fav_button">favorites</a>
         </div>
         <!-- end of search container -->
 
