--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     
 
     <!-- movie app js -->
-    <script src = "js/script.js"></script>
+    <script src = "./js/script.js"></script>
 </body>
 </html>
